// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevServerEntryPlugin should add hooks to add entries 1`] = `
Array [
  "DevServerEntryPlugin",
  [Function],
]
`;

exports[`DevServerEntryPlugin should add hooks to add entries 2`] = `
Array [
  Array [
    "context",
    undefined,
    Object {},
    [Function],
  ],
  Array [
    "context",
    undefined,
    Object {},
    [Function],
  ],
]
`;

exports[`DevServerEntryPlugin should add hooks to add entries 3`] = `
Array [
  Array [
    "./foo.js",
    Object {},
  ],
  Array [
    "./bar.js",
    Object {},
  ],
]
`;

exports[`DevServerEntryPlugin should allow modifying entries after creation 1`] = `
Array [
  "DevServerEntryPlugin",
  [Function],
]
`;

exports[`DevServerEntryPlugin should allow modifying entries after creation 2`] = `
Array [
  Array [
    "context",
    undefined,
    Object {},
    [Function],
  ],
]
`;

exports[`DevServerEntryPlugin should allow modifying entries after creation 3`] = `
Array [
  Array [
    "./foobar.js",
    Object {},
  ],
]
`;
